# hss

./: .gitignore  Cargo.toml  README.md  install.sh
.gitea/workflows/: release.yml
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-06-16-hss-implementation.md
docs/superpowers/specs/: 2026-06-16-hss-design.md
src/: config.rs  credentials.rs  fzf.rs  inventory.rs  lib.rs  main.rs  mcp.rs  ssh.rs  types.rs  update.rs
src/tui/: copy_id.rs  credentials_screen.rs  delete_popup.rs  host_form.rs  main_screen.rs  mcp_screen.rs  mod.rs  popup.rs  settings_screen.rs
tests/: config_test.rs  inventory_test.rs
