[package]
name = "hss"
version = "1.0.0"
edition = "2021"
description = "Terminal SSH server manager — TUI, credential storage, Ansible inventory"
license = "MIT"
repository = "https://github.com/artp1ay/hss"

[lib]
name = "hss"
path = "src/lib.rs"

[[bin]]
name = "hss"
path = "src/main.rs"

[dependencies]
anyhow = "1"
libc = "0.2"
ureq = { version = "2", features = ["json"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
dirs = "5"
# linux-native: kernel keyutils (no D-Bus, session-scoped); apple-native: macOS Keychain
keyring = { version = "3", default-features = false, features = ["linux-native", "apple-native"] }
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
skim = "0.10"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
